--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,42 +19,75 @@
 <body class="index-body">
     <!-- header -->
     <header class="header nav-sin-back">
-        <nav class="nav ">
-                <img src="img/piaFinal.png"  alt="">
-            <ul class="nav-menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/servicios.html">Servicios</a></li>
-                <li><a href="pages/nosotros.html">Nosotros</a></li>
-                <li><a href="pages/proyectos.html">Proyectos</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar bg-body-tertiary fixed-top navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a class="navbar-brand" href="#">Offcanvas navbar</a>
+                        
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
         </nav>
+        
     </header>
     <main class="main-inicio">
         <img src="img/prueba3.jpg" alt="">
-        <article class="inicio-texto">
-            <h1>Mp disarq</h1>
-            <p>Diseño y arquitectura</p>
-        </article>
-        <article class="inicio-texto-banner">
-            <h3>Un buen diseño consiste en convertir sueños en realidad.</h3>
-        </article>
+        <div class="main-inicio-text">
+            <article class="inicio-texto">
+                <h1>Mp disarq</h1>
+                <p>Diseño y arquitectura</p>
+            </article>
+            <article class="inicio-texto-banner">
+                <h3>Un buen diseño consiste en convertir sueños en realidad.</h3>
+            </article>
+        </div>
     </main>
-    <footer class="footer">
+    <footer class="footer-principal">
         <ul class="footer-lista">
             <a href="">
-                <img src="img/diseno-logotipo-redes-sociales_23-2151296991-removebg-preview.png" alt="">            </a>
-            <a href="">
-                <img src="img/diseno-logotipo-redes-sociales_23-2151296979-removebg-preview.png" alt="">
-            </a>
-            <a href="">
-                <img src="img/diseno-logotipo-redes-sociales_23-2151296987-removebg-preview.png" alt="">
-            </a>
+                <i class="bi bi-instagram"></i>
+                <a href="">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="">
+                    <i class="bi bi-facebook"></i>
+                </a>
         </ul>
-        <p>BUENOS AIRES | ARGENTINA | PILAR </p>
-        <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
-        <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        <div class="footer-texto">
+            <p>BUENOS AIRES | ARGENTINA | PILAR </p>
+            <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
+            <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
