cambios en el index

--- a/index.html
+++ b/index.html
@@ -17,36 +17,41 @@
 </head>
 
 <body class="index-body">
-    <!-- header -->
-    <header class="header nav-sin-back">
-        <nav class="navbar bg-body-tertiary fixed-top navbar-expand-lg">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+    <!-- header  bg-body-tertiary-->
+    <header class="header ">
+        <nav class="navbar  fixed-top navbar-expand-lg py-3 bg-transparent">
+            <div class="container-fluid contenedor-nav px-4">
+                <a class="navbar-brand logo-nav" href="#">
+                    <img src="img/piaFinal.png" alt="" >
+                </a>
+                <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="bi bi-list fs-1"></i>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                <div class="offcanvas offcanvas-end back-nav-resposive" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                        <a class="navbar-brand" href="#">Offcanvas navbar</a>
-                        
+                    <div class="offcanvas-header align-items-start justify-content-between ">
+                        <a class="navbar-brand logo-nav-responsive" href="#">
+                            <img src="img/piaFinal.png" alt="" >
+                        </a>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Servicios</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="#">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Nosotros</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="#">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Proyectos</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="#">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contacto</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="#">Contacto</a>
                             </li>
                         </ul>
 
