cambiar el background del nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="index-body">
     <!-- header  bg-body-tertiary-->
     <header class="header ">
-        <nav class="navbar  fixed-top navbar-expand-lg py-3 bg-transparent">
+        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <div class="container-fluid contenedor-nav px-4">
                 <a class="navbar-brand logo-nav" href="#">
                     <img src="img/piaFinal.png" alt="" >
