--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <div class="container-fluid contenedor-nav px-4">
                 <a class="navbar-brand logo-nav" href="#">
-                    <img src="img/piaFinal.png" alt="" >
+                    <img src="img/piaFinal.png" alt="logo nav" >
                 </a>
                 <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
                 </button>
-                <div class="offcanvas offcanvas-end back-nav-resposive" tabindex="-1" id="offcanvasNavbar"
+                <div class="offcanvas offcanvas-end back-nav" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="img/piaFinal.png" alt="" >
+                            <img src="img/piaFinal.png" alt="logo nav" >
                         </a>
                         <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
@@ -62,7 +62,7 @@
         
     </header>
     <main class="main-inicio">
-        <img src="img/prueba3.jpg" alt="">
+        <img src="img/prueba3.jpg" alt="Imagen de fondo">
         <div class="main-inicio-text">
             <article class="inicio-texto">
                 <h1>Mp disarq</h1>
