--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,8 +18,8 @@
 
 <body class="index-body">
     <!-- header  bg-body-tertiary-->
-    <header class="header ">
-        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
+    <header class="header">
+        <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <div class="container-fluid contenedor-nav px-4">
                 <a class="navbar-brand logo-nav" href="#">
                     <img src="img/piaFinal.png" alt="logo nav" >
@@ -39,19 +39,19 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="#">Servicios</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="pages/servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="#">Nosotros</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="pages/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="#">Proyectos</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="pages/proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="#">Contacto</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
