responsive en servicios

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="index-body">
+    <!-- PAGINA RESPONSIVE -->
     <!-- header  bg-body-tertiary-->
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
@@ -61,6 +62,8 @@
         </nav>
         
     </header>
+
+    <!-- MAIN -->
     <main class="main-inicio">
         <img src="img/prueba3.jpg" alt="Imagen de fondo">
         <div class="main-inicio-text">
@@ -73,6 +76,8 @@
             </article>
         </div>
     </main>
+
+    <!-- FOOTER -->
     <footer class="footer-principal">
         <ul class="footer-lista">
             <a href="">
