--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
@@ -12,21 +17,50 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="nav">
-            <a href="../index.html">
-                <img src="../img/piaFinal.png" alt="">
-            </a>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+    <header class="header ">
+        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
+            <div class="container-fluid contenedor-nav px-4">
+                <a class="navbar-brand logo-nav" href="#">
+                    <img src="../img/piaFinal.png" alt="logo nav">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <i class="bi bi-list fs-1"></i>
+                </button>
+                <div class="offcanvas offcanvas-end back-nav" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header align-items-start justify-content-between ">
+                        <a class="navbar-brand logo-nav-responsive" href="#">
+                            <img src="../img/piaFinal.png" alt="logo nav">
+                        </a>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
-    <main class="servicios-main">
+    <main class="nosotros-main">
         <section class="nosotros-section">
             <div class="nosotros-item">
                 <h2>Nosotros</h2>
@@ -48,11 +82,11 @@
                 </div>
             </div>
         </section>
-        <section class="servicios-contenedor">
-            <article class="servicios-item">
-                <img src="https://images.homify.com/v1445857335/p/photo/image/1041089/Vivienda_modular_190_HD.jpg"
+        <section class="objetivo-contenedor">
+            <article class="objetivo-contenedor-item">
+                <img src="https://cdn.milenio.com/uploads/media/2020/03/20/comprar-casa-campo-posibilidades-debes.jpg"
                     alt="mujer trabajando en una computadora">
-                <div class="servicios-texto-derecha">
+                <div class="objetivo-texto-derecha">
                     <h2>Nuestro Objetivo</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, natus. Nulla magnam earum
                         expedita veritatis, ullam pariatur alias veniam sit doloribus ut, placeat cupiditate ipsa
@@ -73,25 +107,28 @@
             </article>
         </section>
     </main>
-    <footer class="footer">
+    <!-- FOOTER -->
+    <footer class="footer-principal">
         <ul class="footer-lista">
             <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296991-removebg-preview.png"
-                    alt="">
-            </a>
-            <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296979-removebg-preview.png"
-                    alt="">
-            </a>
-            <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296987-removebg-preview.png"
-                    alt="">
-            </a>
+                <i class="bi bi-instagram"></i>
+                <a href="">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="">
+                    <i class="bi bi-facebook"></i>
+                </a>
         </ul>
-        <p>BUENOS AIRES | ARGENTINA | PILAR </p>
-        <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
-        <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        <div class="footer-texto">
+            <p>BUENOS AIRES | ARGENTINA | PILAR </p>
+            <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
+            <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
