--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,16 +43,16 @@
                                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="pages/servicios.html">Servicios</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="pages/nosotros.html">Nosotros</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="pages/proyectos.html">Proyectos</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="pages/contacto.html">Contacto</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -196,6 +196,7 @@
             </section>
         </div>
     </main>
+    <!-- FOOTER -->
     <footer class="footer-principal">
         <ul class="footer-lista">
             <a href="">
