--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,10 +40,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link color-nav-link color-nav-a" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
+                                <a class="nav-link active" href="servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="nosotros.html">Nosotros</a>
