modificando los html de proyectos...

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- pagina responsive -->
     <header class="header">
         <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <div class="container-fluid contenedor-nav px-4">
