--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,25 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <title>Contacto | Mp Disarq</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="nav">
-            <a href="../index.html">
-                <img src="../img/piaFinal.png" alt="">
-            </a>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+    <header class="header ">
+        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
+            <div class="container-fluid contenedor-nav px-4">
+                <a class="navbar-brand logo-nav" href="#">
+                    <img src="../img/piaFinal.png" alt="logo nav">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <i class="bi bi-list fs-1"></i>
+                </button>
+                <div class="offcanvas offcanvas-end back-nav" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header align-items-start justify-content-between ">
+                        <a class="navbar-brand logo-nav-responsive" href="#">
+                            <img src="../img/piaFinal.png" alt="logo nav">
+                        </a>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link  active" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -41,21 +75,28 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168881908776!2d-58.384150689434605!3d-34.60373445738492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1723757250822!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
-    <footer class="footer">
+
+    <!-- Footer -->
+    <footer class="footer-principal">
         <ul class="footer-lista">
             <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296991-removebg-preview.png" alt="">
-            </a>
-            <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296979-removebg-preview.png" alt="">
-            </a>
-            <a href="">
-                <img src="../img/diseno-logotipo-redes-sociales_23-2151296987-removebg-preview.png" alt="">
-            </a>
+                <i class="bi bi-instagram"></i>
+                <a href="">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="">
+                    <i class="bi bi-facebook"></i>
+                </a>
         </ul>
-        <p>BUENOS AIRES | ARGENTINA | PILAR </p>
-        <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
-        <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        <div class="footer-texto">
+            <p>BUENOS AIRES | ARGENTINA | PILAR </p>
+            <p>LEGAL | POLITICA DE PRIVACIDAD | POLITICA DE COOKIES</p>
+            <p>©2024 MP DISARQ | MARIA PIA DISARQ</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
