--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,13 +43,13 @@
                                 <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link  active" href="nosotros.html">Nosotros</a>
+                                <a class="nav-link color-nav-link color-nav-a" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
+                                <a class="nav-link active" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
 
