modificando el nav

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,13 +18,14 @@
 
 <body>
     <!-- pagina responsive -->
-    <header class="header ">
-        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
-            <div class="container-fluid contenedor-nav px-4">
-                <a class="navbar-brand logo-nav" href="#">
-                    <img src="../img/piaFinal.png" alt="logo nav">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+    <header class="header">
+        <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
+            <a class="navbar-brand logo-nav" href="#">
+                <img src="../img/piaFinal.png" alt="logo nav" >
+            </a>
+            <div class="container-fluid contenedor-nav px-4 justify-content-end">
+                
+                <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
                 </button>
@@ -32,10 +33,9 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="../img/piaFinal.png" alt="logo nav">
+                            <img src="../img/piaFinal.png" alt="logo nav" >
                         </a>
-                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
@@ -46,7 +46,7 @@
                                 <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link  active" href="nosotros.html">Nosotros</a>
+                                <a class="nav-link active" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="proyectos.html">Proyectos</a>
@@ -55,7 +55,6 @@
                                 <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
-
                     </div>
                 </div>
             </div>
