--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <!-- header  bg-body-tertiary-->
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
-            <div class="container-fluid contenedor-nav px-4">
-                <a class="navbar-brand logo-nav" href="#">
-                    <img src="img/piaFinal.png" alt="logo nav" >
-                </a>
+            <a class="navbar-brand logo-nav" href="#">
+                <img src="img/piaFinal.png" alt="logo nav" >
+            </a>
+            <div class="container-fluid contenedor-nav px-4 justify-content-end">
+                
                 <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
