--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +15,16 @@
         rel="stylesheet">
     <title>Contacto | Mp Disarq</title>
 </head>
+
 <body>
-    <header class="header ">
-        <nav class="navbar  fixed-top navbar-expand-lg py-3 back-nav-resposive">
-            <div class="container-fluid contenedor-nav px-4">
-                <a class="navbar-brand logo-nav" href="#">
-                    <img src="../img/piaFinal.png" alt="logo nav">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+    <header class="header">
+        <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
+            <a class="navbar-brand logo-nav" href="#">
+                <img src="../img/piaFinal.png" alt="logo nav">
+            </a>
+            <div class="container-fluid contenedor-nav px-4 justify-content-end">
+
+                <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
                 </button>
@@ -37,7 +40,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link color-nav-link color-nav-a " aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
@@ -52,7 +55,6 @@
                                 <a class="nav-link active" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -72,7 +74,10 @@
         </section>
         <section class="contacto-ubicacion">
             <h2>nuestras oficinas</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168881908776!2d-58.384150689434605!3d-34.60373445738492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1723757250822!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168881908776!2d-58.384150689434605!3d-34.60373445738492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1723757250822!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
 
@@ -99,4 +104,5 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
