pasando codigo css de index y servicios a sass

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
-                <img src="img/piaFinal.png" alt="logo nav" >
+                <img src="img/piaFinal.png" alt="logo nav">
             </a>
             <div class="container-fluid contenedor-nav px-4 justify-content-end">
-                
+
                 <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
@@ -34,9 +34,10 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="img/piaFinal.png" alt="logo nav" >
+                            <img src="img/piaFinal.png" alt="logo nav">
                         </a>
-                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
@@ -61,12 +62,13 @@
                 </div>
             </div>
         </nav>
-        
+
     </header>
 
     <!-- MAIN -->
     <main class="main-inicio">
-        <img src="img/prueba3.jpg" alt="Imagen de fondo">
+        <div class="back-negro"></div>
+        <div class="img-main"></div>
         <div class="main-inicio-text">
             <article class="inicio-texto">
                 <h1>Mp disarq</h1>
@@ -83,12 +85,13 @@
         <ul class="footer-lista">
             <a href="">
                 <i class="bi bi-instagram"></i>
-                <a href="">
-                    <i class="bi bi-whatsapp"></i>
-                </a>
-                <a href="">
-                    <i class="bi bi-facebook"></i>
-                </a>
+            </a>
+            <a href="">
+                <i class="bi bi-whatsapp"></i>
+            </a>
+            <a href="">
+                <i class="bi bi-facebook"></i>
+            </a>
         </ul>
         <div class="footer-texto">
             <p>BUENOS AIRES | ARGENTINA | PILAR </p>
