--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
-                <img src="img/piaFinal.png" alt="logo nav">
+                <img src="./img/piaFinal.png" alt="logo nav">
             </a>
             <div class="container-fluid contenedor-nav px-4 justify-content-end">
 
