--- a/pages/interiores.html
+++ b/pages/interiores.html
@@ -32,7 +32,7 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="img/piaFinal.png" alt="logo nav" >
+                            <img src="../img/piaFinal.png" alt="logo nav" >
                         </a>
                         <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
