mediaqueris en servicios y nosotros

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,9 +65,9 @@
         <section class="contacto-formulario">
             <h2>Contactame</h2>
             <form action="">
-                <input type="text" placeholder="Nombre">
-                <input type="number" placeholder="Telefono">
-                <input type="email" placeholder="Gmail">
+                <input type="text" placeholder="Nombre" class="form-input-contacto">
+                <input type="number" placeholder="Telefono" class="form-input-contacto">
+                <input type="email" placeholder="Gmail" class="form-input-contacto">
                 <textarea name="" id="" placeholder="Cuentanos un poco de lo que necesitas"></textarea>
                 <button>Enviar</button>
             </form>
