proyecto listo con sass

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
-                <img src="./img/piaFinal.png" alt="logo nav">
+                <img src="./img/logo-pia.png" alt="logo nav">
             </a>
             <div class="container-fluid contenedor-nav px-4 justify-content-end">
 
@@ -36,7 +36,7 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="img/piaFinal.png" alt="logo nav">
+                            <img src="img/logo-pia.png" alt="logo nav">
                         </a>
                         <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
