modificando el padding y el justify del nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- PAGINA RESPONSIVE -->
     <!-- header  bg-body-tertiary-->
     <header class="header">
-        <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
+        <nav class="navbar fixed-top navbar-expand-lg py-0 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
                 <img src="./img/logo-pia.png" alt="logo nav">
             </a>
@@ -42,7 +42,7 @@
                             aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-0 gap-4">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
