--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
+        <nav class="navbar fixed-top navbar-expand-lg py-0 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
                 <img src="../img/logo-pia.png" alt="logo nav">
             </a>
@@ -35,16 +35,15 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="../img/logo-pia.png" alt="logo nav">
+                            <img src="img/logo-pia.png" alt="logo nav">
                         </a>
                         <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-0 gap-4">
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a " aria-current="page"
-                                    href="../index.html">Home</a>
+                                <a class="nav-link color-nav-link color-nav-a" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
@@ -59,6 +58,7 @@
                                 <a class="nav-link color-nav-link color-nav-a" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
+
                     </div>
                 </div>
             </div>
